// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabwareItem component renders 1`] = `
<li
  className="item invalid"
>
  <p
    className="item_category_column"
  >
    N/A
  </p>
  <div
    className="item_name_column"
  >
    <p
      className="item_primary_name"
    >
      N/A
    </p>
    <p
      className="item_titled_name"
    >
      <span
        className="titled_name_title"
      >
        File Name
      </span>
      <span>
        some_file.json
      </span>
    </p>
    <p
      className="item_titled_name"
    >
      <span
        className="titled_name_title"
      >
        API Name
      </span>
      <span>
        N/A
      </span>
    </p>
    <div
      className="item_warning_wrapper"
    >
      <Warning>
        <p>
          This file is not a valid Opentrons labware definition or cannot be read. Please check the file.
        </p>
      </Warning>
    </div>
  </div>
  <p
    className="item_date_column"
  >
    2019-10-21
  </p>
</li>
`;

exports[`LabwareItem component renders 2`] = `
<li
  className="item"
>
  <p
    className="item_category_column"
  >
    Well Plate
  </p>
  <div
    className="item_name_column"
  >
    <p
      className="item_primary_name"
    >
      Foo Bar
    </p>
    <p
      className="item_titled_name"
    >
      <span
        className="titled_name_title"
      >
        File Name
      </span>
      <span>
        some_file.json
      </span>
    </p>
    <p
      className="item_titled_name"
    >
      <span
        className="titled_name_title"
      >
        API Name
      </span>
      <span>
        foo_bar
      </span>
    </p>
  </div>
  <p
    className="item_date_column"
  >
    2019-10-21
  </p>
</li>
`;
